2012-08-12  JMB  New application icon

    Switched to a new application icon designed specifically for PortaBase by
    Holly Guenther (http://kimchikawaii.deviantart.com).  Some of my upcoming
    plans for PortaBase work best if it has a unique and distinctive icon
    rather than the previous one borrowed from Wikipedia (or the one before
    that borrowed from KDE).

2012-08-06  JMB  Support for signing Windows binaries

    Updated the windows build scripts to support digitally signing the program
    binary, installer, and uninstaller.  This should tone down the warning
    messages shown on Vista and higher when installing future PortaBase
    releases.

2012-07-31  JMB  Added Sphinx translation files, more packaging fixes

    Added the localization files for Sphinx itself so they can be translated
    for PortaBase along with everything else.  Included a few search-related
    phrases currently missing in the upstream files due to a bug.
    
    Fixed more packaging bugs (Debian source format version, detecting the
    correct language for help files, building the help files on Windows, etc.)
    Added some more information to the build instructions (INSTALL, etc.)

2012-07-29  JMB  Proper internationalization of help pages

    Reworked how the help files are generated so that the translations for
    them can be managed online with Transifex just like the UI translations.
    Updated the build scripts accordingly.

2012-07-26  JMB  Updated UI translation files, Transifex setup

    Got the translation files ready for the translators to update for the next
    release.  Mapped the files to the PortaBase translation project on
    Transifex.

2012-07-23  JMB  More HTML display fixes, build script updates

    Fixed the new code for HTML display widgets to correctly display the top
    of the content first (if there's enough to cause scrolling).  Made more
    improvements to the build scripts, mostly for Windows.
